Translations by noeismet to translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -41,5 +41,6 @@
   "mn5:6.3": "Supposez qu’un plat en bronze a été apporté d’un magasin ou d’une forge propre et brillant. ",
   "mn5:6.4": "Et que les propriétaires ne l’utilisent pas ou ne le nettoient pas, mais le gardent dans un endroit sale. ",
   "mn5:6.5": "Avec le temps, ce plat en bronze ne deviendrait-il pas plus sale et plus taché ? » ",
-  "mn5:6.6": "« Oui, révérend. » "
+  "mn5:6.6": "« Oui, révérend. » ",
+  "mn5:6.7": "« De la même manière, considérez le cas de la personne qui n’a pas de souillure et ne le comprend pas. Vous pouvez vous attendre à ce qu’… "
 }
