--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -44,5 +44,6 @@
   "mn5:6.6": "« Oui, révérend. » ",
   "mn5:6.7": "« De la même manière, considérez le cas de la personne qui n’a pas de souillure et ne le comprend pas. Vous pouvez vous attendre à ce qu’… ",
   "mn5:6.8": "elle meure avec un esprit corrompu. ",
-  "mn5:7.1": "Considérez le cas de la personne qui n’a pas de souillure et le comprend. Vous pouvez vous attendre à ce qu’elle ne se concentre pas sur la caractéristique de la beauté, et à cause de cela, la convoitise n’infectera pas son esprit. "
+  "mn5:7.1": "Considérez le cas de la personne qui n’a pas de souillure et le comprend. Vous pouvez vous attendre à ce qu’elle ne se concentre pas sur la caractéristique de la beauté, et à cause de cela, la convoitise n’infectera pas son esprit. ",
+  "mn5:7.2": "Et elle mourra sans avidité, haine, illusion ou tache, avec un esprit pur. "
 }
