Translations by noeismet to translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -49,5 +49,6 @@
   "mn5:7.3": "Supposez qu’un plat en bronze a été apporté d’un magasin ou d’une forge propre et brillant. ",
   "mn5:7.4": "Et que les propriétaires l’utilisent et le nettoient, et ne le gardent pas dans un endroit sale. ",
   "mn5:7.5": "Avec le temps, ce plat en bronze ne deviendrait-il pas plus propre et plus brillant ? » ",
-  "mn5:7.6": "« Oui, révérend. » "
+  "mn5:7.6": "« Oui, révérend. » ",
+  "mn5:7.7": "« De même, considérez le cas de la personne qui n’a pas de souillure et le comprend. Vous pouvez vous attendre à ce qu’… "
 }
