Translations by noeismet to translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -51,5 +51,6 @@
   "mn5:7.5": "Avec le temps, ce plat en bronze ne deviendrait-il pas plus propre et plus brillant ? » ",
   "mn5:7.6": "« Oui, révérend. » ",
   "mn5:7.7": "« De même, considérez le cas de la personne qui n’a pas de souillure et le comprend. Vous pouvez vous attendre à ce qu’… ",
-  "mn5:7.8": "elle meure avec un esprit pur. "
+  "mn5:7.8": "elle meure avec un esprit pur. ",
+  "mn5:8.1": "Voici la cause, voici la raison pour laquelle, parmi les deux personnes avec une souillure, l’une est considérée comme pire et l’autre meilleure. "
 }
