--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -52,5 +52,6 @@
   "mn5:7.6": "« Oui, révérend. » ",
   "mn5:7.7": "« De même, considérez le cas de la personne qui n’a pas de souillure et le comprend. Vous pouvez vous attendre à ce qu’… ",
   "mn5:7.8": "elle meure avec un esprit pur. ",
-  "mn5:8.1": "Voici la cause, voici la raison pour laquelle, parmi les deux personnes avec une souillure, l’une est considérée comme pire et l’autre meilleure. "
+  "mn5:8.1": "Voici la cause, voici la raison pour laquelle, parmi les deux personnes avec une souillure, l’une est considérée comme pire et l’autre meilleure. ",
+  "mn5:8.2": "Et voici la cause, voici la raison pour laquelle, parmi les deux personnes sans souillure, l’une est considérée comme pire et l’autre meilleure. » "
 }
