Translations by noeismet to translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -56,5 +56,6 @@
   "mn5:8.2": "Et voici la cause, voici la raison pour laquelle, parmi les deux personnes sans souillure, l’une est considérée comme pire et l’autre meilleure. » ",
   "mn5:9.1": "« Révérend, le mot ‹ souillure › est évoqué. ",
   "mn5:9.2": "Mais qu’est-ce que ‹ souillure › désigne ? » ",
-  "mn5:9.3": "« Révérend, ‹ souillure › désigne les désirs nuisibles. "
+  "mn5:9.3": "« Révérend, ‹ souillure › désigne les désirs nuisibles. ",
+  "mn5:10.1": "Il se peut qu’un monastique désire : "
 }
