Translations by noeismet to translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -57,5 +57,6 @@
   "mn5:9.1": "« Révérend, le mot ‹ souillure › est évoqué. ",
   "mn5:9.2": "Mais qu’est-ce que ‹ souillure › désigne ? » ",
   "mn5:9.3": "« Révérend, ‹ souillure › désigne les désirs nuisibles. ",
-  "mn5:10.1": "Il se peut qu’un monastique désire : "
+  "mn5:10.1": "Il se peut qu’un monastique désire : ",
+  "mn5:10.2": "‹ Si je commets une faute, j’espère que les monastiques ne le découvriront pas ! › "
 }
