Translations by noeismet to translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -59,5 +59,6 @@
   "mn5:9.3": "« Révérend, ‹ souillure › désigne les désirs nuisibles. ",
   "mn5:10.1": "Il se peut qu’un monastique désire : ",
   "mn5:10.2": "‹ Si je commets une faute, j’espère que les monastiques ne le découvriront pas ! › ",
-  "mn5:10.3": "Mais il se peut que les monastiques découvrent qu’il "
+  "mn5:10.3": "Mais il se peut que les monastiques découvrent qu’il ",
+  "mn5:10.4": "a commis une faute. "
 }
