Translations by noeismet to translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -61,5 +61,6 @@
   "mn5:10.2": "‹ Si je commets une faute, j’espère que les monastiques ne le découvriront pas ! › ",
   "mn5:10.3": "Mais il se peut que les monastiques découvrent qu’il ",
   "mn5:10.4": "a commis une faute. ",
-  "mn5:10.5": "Pensant, ‹ Les monastiques ont découvert ma faute ›, "
+  "mn5:10.5": "Pensant, ‹ Les monastiques ont découvert ma faute ›, ",
+  "mn5:10.6": "il se met en colère et devient amer. "
 }
