--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -62,5 +62,6 @@
   "mn5:10.3": "Mais il se peut que les monastiques découvrent qu’il ",
   "mn5:10.4": "a commis une faute. ",
   "mn5:10.5": "Pensant, ‹ Les monastiques ont découvert ma faute ›, ",
-  "mn5:10.6": "il se met en colère et devient amer. "
+  "mn5:10.6": "il se met en colère et devient amer. ",
+  "mn5:10.7": "Et cette colère et cette amertume "
 }
