--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -65,5 +65,6 @@
   "mn5:10.6": "il se met en colère et devient amer. ",
   "mn5:10.7": "Et cette colère et cette amertume ",
   "mn5:10.8": "sont toutes deux des souillures. ",
-  "mn5:11.1": "Il se peut qu’un monastique désire : "
+  "mn5:11.1": "Il se peut qu’un monastique désire : ",
+  "mn5:11.2": "‹ Si je commets une faute, j’espère que les monastiques me reprendront en privé, plutôt qu’en présence du Saṅgha. › "
 }
