Translations by noeismet to translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -73,5 +73,6 @@
   "mn5:12.3": "Mais il se peut qu’une personne qui ne soit pas son égal reprenne ce monastique… ",
   "mn5:13.1": "Il se peut qu’un monastique désire : ",
   "mn5:13.2": "‹ Oh, j’espère que le Maître interrogera les monastiques en m’interrogeant moi seul à plusieurs reprises, et non un autre monastique. › ",
-  "mn5:13.3": "Mais il se peut que le Maître interroge les monastiques en interrogeant un autre monastique à plusieurs reprises… "
+  "mn5:13.3": "Mais il se peut que le Maître interroge les monastiques en interrogeant un autre monastique à plusieurs reprises… ",
+  "mn5:14.1": "Il se peut qu’un monastique désire : "
 }
