Translations by noeismet to translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -75,5 +75,6 @@
   "mn5:13.2": "‹ Oh, j’espère que le Maître interrogera les monastiques en m’interrogeant moi seul à plusieurs reprises, et non un autre monastique. › ",
   "mn5:13.3": "Mais il se peut que le Maître interroge les monastiques en interrogeant un autre monastique à plusieurs reprises… ",
   "mn5:14.1": "Il se peut qu’un monastique désire : ",
-  "mn5:14.2": "‹ Oh, j’espère que les monastiques entreront dans le village pour le repas en me mettant tout à l’avant, et non un autre monastique. › "
+  "mn5:14.2": "‹ Oh, j’espère que les monastiques entreront dans le village pour le repas en me mettant tout à l’avant, et non un autre monastique. › ",
+  "mn5:14.3": "Mais il se peut que les monastiques entrent dans le village pour le repas en mettant un autre monastique tout à l’avant… "
 }
