Translations by noeismet to translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -77,5 +77,6 @@
   "mn5:14.1": "Il se peut qu’un monastique désire : ",
   "mn5:14.2": "‹ Oh, j’espère que les monastiques entreront dans le village pour le repas en me mettant tout à l’avant, et non un autre monastique. › ",
   "mn5:14.3": "Mais il se peut que les monastiques entrent dans le village pour le repas en mettant un autre monastique tout à l’avant… ",
-  "mn5:15.1": "Il se peut qu’un monastique désire : "
+  "mn5:15.1": "Il se peut qu’un monastique désire : ",
+  "mn5:15.2": "‹ Oh, j’espère qu’à moi seul reviendra le meilleur siège, la meilleure boisson et la meilleure nourriture d’aumône dans le réfectoire, et non à un autre monastique. › "
 }
