--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -79,5 +79,6 @@
   "mn5:14.3": "Mais il se peut que les monastiques entrent dans le village pour le repas en mettant un autre monastique tout à l’avant… ",
   "mn5:15.1": "Il se peut qu’un monastique désire : ",
   "mn5:15.2": "‹ Oh, j’espère qu’à moi seul reviendra le meilleur siège, la meilleure boisson et la meilleure nourriture d’aumône dans le réfectoire, et non à un autre monastique. › ",
-  "mn5:15.3": "Mais il se peut qu’un autre monastique obtienne le meilleur siège, la meilleure boisson et la meilleure nourriture d’aumône dans le réfectoire… "
+  "mn5:15.3": "Mais il se peut qu’un autre monastique obtienne le meilleur siège, la meilleure boisson et la meilleure nourriture d’aumône dans le réfectoire… ",
+  "mn5:16.1": "Il se peut qu’un monastique désire : "
 }
