Translations by noeismet to translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -82,5 +82,6 @@
   "mn5:15.3": "Mais il se peut qu’un autre monastique obtienne le meilleur siège, la meilleure boisson et la meilleure nourriture d’aumône dans le réfectoire… ",
   "mn5:16.1": "Il se peut qu’un monastique désire : ",
   "mn5:16.2": "‹ J’espère qu’à moi seul reviendra le privilège de réciter les vers d’appréciation après avoir mangé dans le réfectoire, et non à un autre monastique. › ",
-  "mn5:16.3": "Mais il se peut qu’un autre monastique récite les vers d’appréciation après avoir mangé dans le réfectoire… "
+  "mn5:16.3": "Mais il se peut qu’un autre monastique récite les vers d’appréciation après avoir mangé dans le réfectoire… ",
+  "mn5:17.1": "Il se peut qu’un monastique désire : "
 }
