Translations by noeismet to translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -85,5 +85,6 @@
   "mn5:16.3": "Mais il se peut qu’un autre monastique récite les vers d’appréciation après avoir mangé dans le réfectoire… ",
   "mn5:17.1": "Il se peut qu’un monastique désire : ",
   "mn5:17.2": "‹ Oh, j’espère que j’enseignerai le Dhamma aux monastiques et aux laïcs dans le monastère, et non un autre monastique. › ",
-  "mn5:18-20.5": "Mais il se peut qu’un autre monastique enseigne le Dhamma… "
+  "mn5:18-20.5": "Mais il se peut qu’un autre monastique enseigne le Dhamma… ",
+  "mn5:21.1": "Il se peut qu’un monastique désire : "
 }
