--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -86,5 +86,6 @@
   "mn5:17.1": "Il se peut qu’un monastique désire : ",
   "mn5:17.2": "‹ Oh, j’espère que j’enseignerai le Dhamma aux monastiques et aux laïcs dans le monastère, et non un autre monastique. › ",
   "mn5:18-20.5": "Mais il se peut qu’un autre monastique enseigne le Dhamma… ",
-  "mn5:21.1": "Il se peut qu’un monastique désire : "
+  "mn5:21.1": "Il se peut qu’un monastique désire : ",
+  "mn5:21.2": "‹ Oh, j’espère que les monastiques et les laïcs m’honoreront, respecteront, révéreront et vénéreront moi seul, et non un autre monastique. › "
 }
