Translations by noeismet to translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -89,5 +89,6 @@
   "mn5:21.1": "Il se peut qu’un monastique désire : ",
   "mn5:21.2": "‹ Oh, j’espère que les monastiques et les laïcs m’honoreront, respecteront, révéreront et vénéreront moi seul, et non un autre monastique. › ",
   "mn5:22-24.5": "Mais il se peut qu’un autre monastique soit honoré, respecté, révéré et vénéré… ",
-  "mn5:25.1": "Il se peut qu’un monastique désire : "
+  "mn5:25.1": "Il se peut qu’un monastique désire : ",
+  "mn5:25.2": "‹ J’espère obtenir les plus belles robes, la meilleure nourriture d’aumône, les meilleurs logements et médicaments, ainsi que le nécessaire pour les malades, et non un autre monastique. › "
 }
