Translations by noeismet to translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -91,5 +91,6 @@
   "mn5:22-24.5": "Mais il se peut qu’un autre monastique soit honoré, respecté, révéré et vénéré… ",
   "mn5:25.1": "Il se peut qu’un monastique désire : ",
   "mn5:25.2": "‹ J’espère obtenir les plus belles robes, la meilleure nourriture d’aumône, les meilleurs logements et médicaments, ainsi que le nécessaire pour les malades, et non un autre monastique. › ",
-  "mn5:25.3": "Mais il se peut qu’un autre monastique obtienne les plus belles robes, la meilleure nourriture d’aumône, les meilleurs logements et médicaments ainsi que le nécessaire pour les malades… "
+  "mn5:25.3": "Mais il se peut qu’un autre monastique obtienne les plus belles robes, la meilleure nourriture d’aumône, les meilleurs logements et médicaments ainsi que le nécessaire pour les malades… ",
+  "mn5:26-27.6": "Pensant : ‹ Un autre monastique a obtenu les plus belles robes, la meilleure nourriture d’aumône, les meilleurs logements et médicaments ainsi que le nécessaire pour les malades ›, "
 }
