--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -95,5 +95,6 @@
   "mn5:26-27.6": "Pensant : ‹ Un autre monastique a obtenu les plus belles robes, la meilleure nourriture d’aumône, les meilleurs logements et médicaments ainsi que le nécessaire pour les malades ›, ",
   "mn5:26-27.7": "il se met en colère et devient amer. ",
   "mn5:26-27.8": "Et cette colère et cette amertume ",
-  "mn5:26-27.9": "sont toutes deux des souillures. "
+  "mn5:26-27.9": "sont toutes deux des souillures. ",
+  "mn5:28.1": "‹ souillure › désigne les désirs nuisibles. "
 }
