Translations by noeismet to translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -96,5 +96,6 @@
   "mn5:26-27.7": "il se met en colère et devient amer. ",
   "mn5:26-27.8": "Et cette colère et cette amertume ",
   "mn5:26-27.9": "sont toutes deux des souillures. ",
-  "mn5:28.1": "‹ souillure › désigne les désirs nuisibles. "
+  "mn5:28.1": "‹ souillure › désigne les désirs nuisibles. ",
+  "mn5:29.1": "Supposons qu’un monastique ne parvienne pas à se défaire des désirs nuisibles, ceux-ci étant pourtant manifestes et connus. Malgré une vie en retrait, dans des demeures isolées, se nourrissant uniquement d’aumône, errant à la quête d’aumône, revêtant des robes en loques ou défraîchies, il ne reçoit pas l’honneur, le respect, la révérence, ni la vénération de ses pairs spirituels. "
 }
