--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -100,5 +100,6 @@
   "mn5:29.1": "Supposons qu’un monastique ne parvienne pas à se défaire des désirs nuisibles, ceux-ci étant pourtant manifestes et connus. Malgré une vie en retrait, dans des demeures isolées, se nourrissant uniquement d’aumône, errant à la quête d’aumône, revêtant des robes en loques ou défraîchies, il ne reçoit pas l’honneur, le respect, la révérence, ni la vénération de ses pairs spirituels. ",
   "mn5:29.2": "Pourquoi cela ? ",
   "mn5:29.3": "C’est parce que ces désirs nuisibles, manifestes et connus, n’ont pas été abandonnés par ce vénérable. ",
-  "mn5:29.4": "Supposons qu’un plat en bronze a été apporté d’un magasin ou d’une forge propre et brillant. "
+  "mn5:29.4": "Supposons qu’un plat en bronze a été apporté d’un magasin ou d’une forge propre et brillant. ",
+  "mn5:29.5": "Puis les propriétaires le préparent avec la carcasse d’un serpent, d’un chien, ou d’un humain, le couvrent avec un couvercle en bronze, et l’amènent et l’exposent ensuite au marché. "
 }
