Translations by noeismet to translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -102,5 +102,6 @@
   "mn5:29.3": "C’est parce que ces désirs nuisibles, manifestes et connus, n’ont pas été abandonnés par ce vénérable. ",
   "mn5:29.4": "Supposons qu’un plat en bronze a été apporté d’un magasin ou d’une forge propre et brillant. ",
   "mn5:29.5": "Puis les propriétaires le préparent avec la carcasse d’un serpent, d’un chien, ou d’un humain, le couvrent avec un couvercle en bronze, et l’amènent et l’exposent ensuite au marché. ",
-  "mn5:29.6": "Lorsque les gens le voient, ils disent : "
+  "mn5:29.6": "Lorsque les gens le voient, ils disent : ",
+  "mn5:29.7": "« Mon bon monsieur, que transportez-vous comme un trésor précieux ? » "
 }
