Translations by noeismet to translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -104,5 +104,6 @@
   "mn5:29.5": "Puis les propriétaires le préparent avec la carcasse d’un serpent, d’un chien, ou d’un humain, le couvrent avec un couvercle en bronze, et l’amènent et l’exposent ensuite au marché. ",
   "mn5:29.6": "Lorsque les gens le voient, ils disent : ",
   "mn5:29.7": "« Mon bon monsieur, que transportez-vous comme un trésor précieux ? » ",
-  "mn5:29.8": "Alors, ils soulèvent le couvercle pour que les gens regardent à l’intérieur. "
+  "mn5:29.8": "Alors, ils soulèvent le couvercle pour que les gens regardent à l’intérieur. ",
+  "mn5:29.9": "Mais dès qu’ils aperçoivent à l’intérieur, ils sont remplis de dégoût, de répulsion et d’écœurement. "
 }
