Translations by noeismet to translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -105,5 +105,6 @@
   "mn5:29.6": "Lorsque les gens le voient, ils disent : ",
   "mn5:29.7": "« Mon bon monsieur, que transportez-vous comme un trésor précieux ? » ",
   "mn5:29.8": "Alors, ils soulèvent le couvercle pour que les gens regardent à l’intérieur. ",
-  "mn5:29.9": "Mais dès qu’ils aperçoivent à l’intérieur, ils sont remplis de dégoût, de répulsion et d’écœurement. "
+  "mn5:29.9": "Mais dès qu’ils aperçoivent à l’intérieur, ils sont remplis de dégoût, de répulsion et d’écœurement. ",
+  "mn5:29.10": "Même ceux qui ont faim ne veulent pas le manger, sans parler de ceux qui ont déjà mangé. "
 }
