Translations by noeismet to translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -108,5 +108,6 @@
   "mn5:29.9": "Mais dès qu’ils aperçoivent à l’intérieur, ils sont remplis de dégoût, de répulsion et d’écœurement. ",
   "mn5:29.10": "Même ceux qui ont faim ne veulent pas le manger, sans parler de ceux qui ont déjà mangé. ",
   "mn5:29.11": "De même, lorsque ces désirs nuisibles, manifestes et connus, n’ont pas été abandonnés par un monastique… leurs compagnons spirituels ne les honorent pas, ne les respectent pas, ne les révèrent pas, et ne les vénèrent pas. ",
-  "mn5:29.12": "Pourquoi cela ? "
+  "mn5:29.12": "Pourquoi cela ? ",
+  "mn5:29.13": "C’est parce que ces désirs nuisibles, manifestes et connus, n’ont pas été abandonnés par ce vénérable. "
 }
