Translations by noeismet to translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -109,5 +109,6 @@
   "mn5:29.10": "Même ceux qui ont faim ne veulent pas le manger, sans parler de ceux qui ont déjà mangé. ",
   "mn5:29.11": "De même, lorsque ces désirs nuisibles, manifestes et connus, n’ont pas été abandonnés par un monastique… leurs compagnons spirituels ne les honorent pas, ne les respectent pas, ne les révèrent pas, et ne les vénèrent pas. ",
   "mn5:29.12": "Pourquoi cela ? ",
-  "mn5:29.13": "C’est parce que ces désirs nuisibles, manifestes et connus, n’ont pas été abandonnés par ce vénérable. "
+  "mn5:29.13": "C’est parce que ces désirs nuisibles, manifestes et connus, n’ont pas été abandonnés par ce vénérable. ",
+  "mn5:30.1": "Supposons que ces désirs nuisibles, manifestes et connus, soient abandonnés par un monastique. Même s’ils habitent dans un village, acceptent des invitations à un repas, et portent des robes offertes par des laïcs, leurs compagnons spirituels les honorent, les respectent, les révèrent et les vénèrent. "
 }
