--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -112,5 +112,6 @@
   "mn5:29.13": "C’est parce que ces désirs nuisibles, manifestes et connus, n’ont pas été abandonnés par ce vénérable. ",
   "mn5:30.1": "Supposons que ces désirs nuisibles, manifestes et connus, soient abandonnés par un monastique. Même s’ils habitent dans un village, acceptent des invitations à un repas, et portent des robes offertes par des laïcs, leurs compagnons spirituels les honorent, les respectent, les révèrent et les vénèrent. ",
   "mn5:30.2": "Pourquoi cela ? ",
-  "mn5:30.3": "C’est parce que ces désirs nuisibles, manifestes et connus, ont été abandonnés par ce vénérable. "
+  "mn5:30.3": "C’est parce que ces désirs nuisibles, manifestes et connus, ont été abandonnés par ce vénérable. ",
+  "mn5:30.4": "Supposons qu’un plat en bronze a été apporté d’un magasin ou d’une forge propre et brillant. "
 }
