--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -113,5 +113,6 @@
   "mn5:30.1": "Supposons que ces désirs nuisibles, manifestes et connus, soient abandonnés par un monastique. Même s’ils habitent dans un village, acceptent des invitations à un repas, et portent des robes offertes par des laïcs, leurs compagnons spirituels les honorent, les respectent, les révèrent et les vénèrent. ",
   "mn5:30.2": "Pourquoi cela ? ",
   "mn5:30.3": "C’est parce que ces désirs nuisibles, manifestes et connus, ont été abandonnés par ce vénérable. ",
-  "mn5:30.4": "Supposons qu’un plat en bronze a été apporté d’un magasin ou d’une forge propre et brillant. "
+  "mn5:30.4": "Supposons qu’un plat en bronze a été apporté d’un magasin ou d’une forge propre et brillant. ",
+  "mn5:30.5": "Puis les propriétaires le préparent avec du riz fin bouilli dont les grains sombres ont été retirés et servis avec de nombreuses soupes et sauces, le couvrent avec un couvercle en bronze, et l’amènent et l’exposent ensuite au marché. "
 }
