--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -115,5 +115,6 @@
   "mn5:30.3": "C’est parce que ces désirs nuisibles, manifestes et connus, ont été abandonnés par ce vénérable. ",
   "mn5:30.4": "Supposons qu’un plat en bronze a été apporté d’un magasin ou d’une forge propre et brillant. ",
   "mn5:30.5": "Puis les propriétaires le préparent avec du riz fin bouilli dont les grains sombres ont été retirés et servis avec de nombreuses soupes et sauces, le couvrent avec un couvercle en bronze, et l’amènent et l’exposent ensuite au marché. ",
-  "mn5:30.6": "Lorsque les gens le voient, ils disent : "
+  "mn5:30.6": "Lorsque les gens le voient, ils disent : ",
+  "mn5:30.7": "« Mon bon monsieur, que transportez-vous comme un trésor précieux ? » "
 }
