--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -117,5 +117,6 @@
   "mn5:30.5": "Puis les propriétaires le préparent avec du riz fin bouilli dont les grains sombres ont été retirés et servis avec de nombreuses soupes et sauces, le couvrent avec un couvercle en bronze, et l’amènent et l’exposent ensuite au marché. ",
   "mn5:30.6": "Lorsque les gens le voient, ils disent : ",
   "mn5:30.7": "« Mon bon monsieur, que transportez-vous comme un trésor précieux ? » ",
-  "mn5:30.8": "Alors, ils soulèvent le couvercle pour que les gens regardent à l’intérieur. "
+  "mn5:30.8": "Alors, ils soulèvent le couvercle pour que les gens regardent à l’intérieur. ",
+  "mn5:30.9": "Et dès qu’ils aperçoivent à l’intérieur, ils sont remplis d’appréciation, d’attrait et de plaisir. "
 }
