Translations by noeismet to translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -118,5 +118,6 @@
   "mn5:30.6": "Lorsque les gens le voient, ils disent : ",
   "mn5:30.7": "« Mon bon monsieur, que transportez-vous comme un trésor précieux ? » ",
   "mn5:30.8": "Alors, ils soulèvent le couvercle pour que les gens regardent à l’intérieur. ",
-  "mn5:30.9": "Et dès qu’ils aperçoivent à l’intérieur, ils sont remplis d’appréciation, d’attrait et de plaisir. "
+  "mn5:30.9": "Et dès qu’ils aperçoivent à l’intérieur, ils sont remplis d’appréciation, d’attrait et de plaisir. ",
+  "mn5:30.10": "Même ceux qui ont mangé veulent le manger, sans parler de ceux qui ont faim. "
 }
