--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -121,5 +121,6 @@
   "mn5:30.9": "Et dès qu’ils aperçoivent à l’intérieur, ils sont remplis d’appréciation, d’attrait et de plaisir. ",
   "mn5:30.10": "Même ceux qui ont mangé veulent le manger, sans parler de ceux qui ont faim. ",
   "mn5:30.11": "De même, lorsque ces désirs nuisibles, manifestes et connus, ont été abandonnés par un monastique… ses compagnons spirituels l’honorent, le respectent, le révèrent et le vénèrent. ",
-  "mn5:30.12": "Pourquoi cela ? "
+  "mn5:30.12": "Pourquoi cela ? ",
+  "mn5:30.13": "C’est parce que ces désirs nuisibles, manifestes et connus, ont été abandonnés par ce vénérable. » "
 }
