--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -123,5 +123,6 @@
   "mn5:30.11": "De même, lorsque ces désirs nuisibles, manifestes et connus, ont été abandonnés par un monastique… ses compagnons spirituels l’honorent, le respectent, le révèrent et le vénèrent. ",
   "mn5:30.12": "Pourquoi cela ? ",
   "mn5:30.13": "C’est parce que ces désirs nuisibles, manifestes et connus, ont été abandonnés par ce vénérable. » ",
-  "mn5:31.1": "Lorsqu’il eut dit cela, le Vénérable Mahāmoggallāna lui dit, "
+  "mn5:31.1": "Lorsqu’il eut dit cela, le Vénérable Mahāmoggallāna lui dit, ",
+  "mn5:31.2": "« Vénérable Sāriputta, une parabole me vient à l’esprit. » "
 }
