Translations by noeismet to translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -128,5 +128,6 @@
   "mn5:31.3": "« Alors parle, puisque tu te sens inspiré », dit Sāriputta. ",
   "mn5:31.4": "« Vénérable, à une époque, je séjournais ici même à Rājagaha, à Giribbaja. ",
   "mn5:31.5": "Puis, je me suis habillé le matin et, prenant mon bol et ma robe, je suis entré à Rājagaha pour l’aumône. ",
-  "mn5:31.6": "Or, à ce moment-là, Samīti, le fils de charron, rabotait la jante d’une roue de char. "
+  "mn5:31.6": "Or, à ce moment-là, Samīti, le fils de charron, rabotait la jante d’une roue de char. ",
+  "mn5:31.7": "L’ascète Ājīvaka Paṇḍuputta, qui était autrefois charron, se tenait à côté, "
 }
