--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -130,5 +130,6 @@
   "mn5:31.5": "Puis, je me suis habillé le matin et, prenant mon bol et ma robe, je suis entré à Rājagaha pour l’aumône. ",
   "mn5:31.6": "Or, à ce moment-là, Samīti, le fils de charron, rabotait la jante d’une roue de char. ",
   "mn5:31.7": "L’ascète Ājīvaka Paṇḍuputta, qui était autrefois charron, se tenait à côté, ",
-  "mn5:31.8": "et cette pensée lui vint à l’esprit : "
+  "mn5:31.8": "et cette pensée lui vint à l’esprit : ",
+  "mn5:31.9": "‹ Oh, j’espère que Samīti, le fils de charron, corrigera le voilage, l’inclinaison et les souillures de cette jante. Alors le rebord sera débarrassé du voilage, de l’inclinaison et des souillures, et serait parfaitement établie dans son essence. › "
 }
