--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -132,5 +132,6 @@
   "mn5:31.7": "L’ascète Ājīvaka Paṇḍuputta, qui était autrefois charron, se tenait à côté, ",
   "mn5:31.8": "et cette pensée lui vint à l’esprit : ",
   "mn5:31.9": "‹ Oh, j’espère que Samīti, le fils de charron, corrigera le voilage, l’inclinaison et les souillures de cette jante. Alors le rebord sera débarrassé du voilage, de l’inclinaison et des souillures, et serait parfaitement établie dans son essence. › ",
-  "mn5:31.10": "Et Samīti rabota les souillures du rebord exactement comme Paṇḍuputta l’avait pensé. "
+  "mn5:31.10": "Et Samīti rabota les souillures du rebord exactement comme Paṇḍuputta l’avait pensé. ",
+  "mn5:31.11": "Puis Paṇḍuputta exprima sa joie : "
 }
