Translations by noeismet to translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -124,7 +124,7 @@
   "mn5:30.12": "Pourquoi cela ? ",
   "mn5:30.13": "C’est parce que ces désirs nuisibles, manifestes et connus, ont été abandonnés par ce vénérable. » ",
   "mn5:31.1": "Lorsqu’il eut dit cela, le Vénérable Mahāmoggallāna lui dit, ",
-  "mn5:31.2": "« Vénérable Sāriputta, une parabole me vient à l’esprit. » ",
+  "mn5:31.2": "« Révérend Sāriputta, une parabole me vient à l’esprit. » ",
   "mn5:31.3": "« Alors parle, puisque tu te sens inspiré », dit Sāriputta. ",
   "mn5:31.4": "« Vénérable, à une époque, je séjournais ici même à Rājagaha, à Giribbaja. ",
   "mn5:31.5": "Puis, je me suis habillé le matin et, prenant mon bol et ma robe, je suis entré à Rājagaha pour l’aumône. ",
