--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -134,5 +134,6 @@
   "mn5:31.9": "‹ Oh, j’espère que Samīti, le fils de charron, corrigera le voilage, l’inclinaison et les souillures de cette jante. Alors le rebord sera débarrassé du voilage, de l’inclinaison et des souillures, et serait parfaitement établie dans son essence. › ",
   "mn5:31.10": "Et Samīti rabota les souillures du rebord exactement comme Paṇḍuputta l’avait pensé. ",
   "mn5:31.11": "Puis Paṇḍuputta exprima sa joie : ",
-  "mn5:31.12": "‹ Il rabote comme s’il connaissait mon cœur avec son cœur ! › "
+  "mn5:31.12": "‹ Il rabote comme s’il connaissait mon cœur avec son cœur ! › ",
+  "mn5:32.2": "Mais il y a ceux qui, mués par la foi, ont quitté la vie laïque pour la vie ascétique. Ils ne sont pas sournois, trompeurs ni rusés. Ils ne sont pas agités, insolents, inconstants, grossiers ni bavards. Ils maîtrisent leurs sens, modèrent leur alimentation, et sont dédiés à la vigilance. Ils respectent l’idéal monastique, et adhèrent strictement à la discipline. Ils ne sont pas indulgents, ni négligents, ni ne sont des pionniers du déclin, négligeant la solitude. Ils sont énergiques et déterminés. Ils sont attentifs, avec conscience, concentration et un esprit unifié ; sages, et dotés de discernement. À l’écoute de l’enseignement du vénérable Sāriputta, ils l’absorbent et le dégustent pour ainsi dire. Verbalement et mentalement, ils s’exclament : "
 }
