Translations by noeismet to translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -139,5 +139,6 @@
   "mn5:32.2": "Mais il y a ceux qui, mués par la foi, ont quitté la vie laïque pour la vie ascétique. Ils ne sont pas sournois, trompeurs ni rusés. Ils ne sont pas agités, insolents, inconstants, grossiers ni bavards. Ils maîtrisent leurs sens, modèrent leur alimentation, et sont dédiés à la vigilance. Ils respectent l’idéal monastique, et adhèrent strictement à la discipline. Ils ne sont pas indulgents, ni négligents, ni ne sont des pionniers du déclin, négligeant la solitude. Ils sont énergiques et déterminés. Ils sont attentifs, avec conscience, concentration et un esprit unifié ; sages, et dotés de discernement. À l’écoute de l’enseignement du vénérable Sāriputta, ils l’absorbent et le dégustent pour ainsi dire. Verbalement et mentalement, ils s’exclament : ",
   "mn5:32.3": "‹ C’est bien, messieurs, qu’il détourne ses compagnons spirituels du nuisible et les guide vers le bénéfique. › ",
   "mn5:33.1": "Supposons qu’une femme ou un homme, jeune et en pleine fleur de l’âge, amateur de parures et ayant lavé sa chevelure, se voit offrir une guirlande de lotus, de jasmin ou de fleurs de liane. Ils la saisiraient des deux mains et la poseraient sur le sommet de leur tête. ",
-  "mn5:33.2": "De même, ces personnes qui, mues par la foi, ont quitté la vie laïque pour la vie ascétique… disent : "
+  "mn5:33.2": "De même, ces personnes qui, mues par la foi, ont quitté la vie laïque pour la vie ascétique… disent : ",
+  "mn5:33.3": "‹ C’est bien, messieurs, qu’il détourne ses compagnons spirituels du nuisible et les guide vers le bénéfique. › » "
 }
