Translations by noeismet to translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn5_translation-fr-noeismet.json
@@ -140,5 +140,6 @@
   "mn5:32.3": "‹ C’est bien, messieurs, qu’il détourne ses compagnons spirituels du nuisible et les guide vers le bénéfique. › ",
   "mn5:33.1": "Supposons qu’une femme ou un homme, jeune et en pleine fleur de l’âge, amateur de parures et ayant lavé sa chevelure, se voit offrir une guirlande de lotus, de jasmin ou de fleurs de liane. Ils la saisiraient des deux mains et la poseraient sur le sommet de leur tête. ",
   "mn5:33.2": "De même, ces personnes qui, mues par la foi, ont quitté la vie laïque pour la vie ascétique… disent : ",
-  "mn5:33.3": "‹ C’est bien, messieurs, qu’il détourne ses compagnons spirituels du nuisible et les guide vers le bénéfique. › » "
+  "mn5:33.3": "‹ C’est bien, messieurs, qu’il détourne ses compagnons spirituels du nuisible et les guide vers le bénéfique. › » ",
+  "mn5:33.4": "Et ainsi, ces deux grands êtres spirituels, reconnaissant la sagesse l’un de l’autre, exprimèrent leur accord et leur estime mutuelle. "
 }
