--- a/translation/de/sabbamitta/sutta/an/an3/an3.16_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.16_translation-de-sabbamitta.json
@@ -5,7 +5,7 @@
   "an3.16:1.1": "„Mönche und Nonnen, wenn ein Mönch drei Dinge besitzt, ist seine Übung unfehlbar, und er hat den Grundstein für das Auflösen der Befleckungen gelegt. ",
   "an3.16:1.2": "Welche drei? ",
   "an3.16:1.3": "Es ist, wenn ein Mönch die Tore der Sinne bewacht, beim Essen Maß hält und sich dem Wachsein weiht. ",
-  "an3.16:2.1": "Und wie bewacht eine Nonne die Tore der Sinne? ",
+  "an3.16:2.1": "Und wie bewacht ein Mönch die Tore der Sinne? ",
   "an3.16:2.2": "Wenn eine Nonne mit dem Auge ein Bild sieht, bleibt sie nicht an den Merkmalen und Einzelheiten hängen. ",
   "an3.16:2.3": "Wenn das Sehvermögen nicht gezügelt wäre, würden schlechte, untaugliche Eigenschaften von Begehrlichkeit und Verdrießlichkeit überhandnehmen. Aus diesem Grund übt sie Zügelung, bewacht das Sehvermögen und hält es im Zaum. ",
   "an3.16:2.4": "Wenn sie mit dem Ohr einen Ton hört … ",
