--- a/translation/de/sabbamitta/sutta/an/an3/an3.16_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.16_translation-de-sabbamitta.json
@@ -8,7 +8,7 @@
   "an3.16:2.1": "Und wie bewacht ein Mönch die Tore der Sinne? ",
   "an3.16:2.2": "Wenn ein Mönch mit dem Auge ein Bild sieht, bleibt er nicht an den Merkmalen und Einzelheiten hängen. ",
   "an3.16:2.3": "Wenn das Sehvermögen nicht gezügelt wäre, würden schlechte, untaugliche Eigenschaften von Begehrlichkeit und Verdrießlichkeit überhandnehmen. Aus diesem Grund übt er Zügelung, bewacht das Sehvermögen und hält es im Zaum. ",
-  "an3.16:2.4": "Wenn sie mit dem Ohr einen Ton hört … ",
+  "an3.16:2.4": "Wenn er mit dem Ohr einen Ton hört … ",
   "an3.16:2.5": "Wenn sie mit der Nase einen Duft riecht … ",
   "an3.16:2.6": "Wenn sie mit der Zunge einen Geschmack schmeckt … ",
   "an3.16:2.7": "Wenn sie mit dem Körper eine Berührung empfindet … ",
