--- a/translation/de/sabbamitta/sutta/an/an3/an3.16_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.16_translation-de-sabbamitta.json
@@ -14,7 +14,7 @@
   "an3.16:2.7": "Wenn er mit dem Körper eine Berührung empfindet … ",
   "an3.16:2.8": "Wenn er mit dem Geist eine Vorstellung erkennt, bleibt er nicht an den Merkmalen und Einzelheiten hängen. ",
   "an3.16:2.9": "Wenn das Vorstellungsvermögen nicht gezügelt wäre, würden schlechte, untaugliche Eigenschaften von Begehrlichkeit und Verdrießlichkeit überhandnehmen. Aus diesem Grund übt er Zügelung, bewacht das Vorstellungsvermögen und hält es im Zaum. ",
-  "an3.16:2.10": "So bewacht eine Nonne die Tore der Sinne. ",
+  "an3.16:2.10": "So bewacht ein Mönch die Tore der Sinne. ",
   "an3.16:3.1": "Und wie hält ein Mönch Maß beim Essen? ",
   "an3.16:3.2": "Es ist, wenn ein Mönch beim Essen über seine Nahrung gründlich nachdenkt: ",
   "an3.16:3.3": "‚Nicht zum Spaß, zum Schwelgen, zur Zier und zum Schmuck, sondern nur, um diesen Körper zu erhalten, um Schaden abzuwenden und das geistliche Leben zu fördern; damit ich altes Unbehagen beende und neues nicht entstehen lasse und ohne Tadel und unbeschwert lebe.‘ ",
