Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an3/an3.16_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an3/an3.16_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.16_translation-de-sabbamitta.json
@@ -21,6 +21,6 @@
   "an3.16:3.4": "So hält ein Mönch Maß beim Essen. ",
   "an3.16:4.1": "Und wie weiht sich ein Mönch dem Wachsein? ",
   "an3.16:4.2": "Es ist, wenn ein Mönch am Tag im Gehen und im Sitzen meditiert und den Geist von Hemmnissen läutert. Während der ersten Nachtwache meditiert er im Gehen und im Sitzen und läutert den Geist von Hemmnissen. Während der mittleren Nachtwache legt er sich in der Haltung des Löwen nieder – auf die rechte Seite, einen Fuß auf den anderen gelegt – achtsam und der Situation bewusst, den Geist auf die Zeit des Aufstehens gerichtet. Während der letzten Nachtwache steht er auf und meditiert im Gehen und im Sitzen und läutert den Geist von Hemmnissen. ",
-  "an3.16:4.3": "So weiht sich eine Nonne dem Wachsein. ",
+  "an3.16:4.3": "So weiht sich ein Mönch dem Wachsein. ",
   "an3.16:4.4": "Wenn ein Mönch oder eine Nonne diese drei Dinge besitzt, ist ihre Übung unfehlbar, und sie haben den Grundstein für das Auflösen der Befleckungen gelegt.“ "
 }
