--- a/translation/de/sabbamitta/sutta/an/an4/an4.37_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.37_translation-de-sabbamitta.json
@@ -4,7 +4,7 @@
   "an4.37:0.3": "Kein Niedergang ",
   "an4.37:1.1": "„Mönche und Nonnen, ein Mönch mit vier Eigenschaften kann nicht verkümmern und ist dem Erlöschen nahegekommen. ",
   "an4.37:1.2": "Mit welchen vier? ",
-  "an4.37:1.3": "Ein Mönch oder eine Nonne hat das sittliche Verhalten vervollkommnet, bewacht die Tore der Sinne, hält Maß beim Essen und weiht sich dem Wachsein. ",
+  "an4.37:1.3": "Da hat ein Mönch das sittliche Verhalten vervollkommnet, bewacht die Tore der Sinne, hält Maß beim Essen und weiht sich dem Wachsein. ",
   "an4.37:2.1": "Und wie hat ein Mönch das sittliche Verhalten vervollkommnet? ",
   "an4.37:2.2": "Da ist ein Mönch sittlich, gezügelt in der Ordenssatzung, verhält sich angemessen und sucht an angemessenen Orten um Almosen nach. Er sieht die Gefahr im kleinsten Fehler und hält die Regeln ein, die er aufgenommen hat. ",
   "an4.37:2.3": "So hat ein Mönch das sittliche Verhalten vervollkommnet. ",
