--- a/translation/de/sabbamitta/sutta/an/an4/an4.37_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.37_translation-de-sabbamitta.json
@@ -8,7 +8,7 @@
   "an4.37:2.1": "Und wie hat ein Mönch das sittliche Verhalten vervollkommnet? ",
   "an4.37:2.2": "Da ist ein Mönch sittlich, gezügelt in der Ordenssatzung, verhält sich angemessen und sucht an angemessenen Orten um Almosen nach. Er sieht die Gefahr im kleinsten Fehler und hält die Regeln ein, die er aufgenommen hat. ",
   "an4.37:2.3": "So hat ein Mönch das sittliche Verhalten vervollkommnet. ",
-  "an4.37:3.1": "Und wie bewacht eine Nonne die Tore der Sinne? ",
+  "an4.37:3.1": "Und wie bewacht ein Mönch die Tore der Sinne? ",
   "an4.37:3.2": "Wenn eine Nonne mit dem Auge ein Bild sieht, bleibt sie nicht an den Merkmalen und Einzelheiten hängen. ",
   "an4.37:3.3": "Wenn das Sehvermögen nicht gezügelt wäre, würden schlechte, untaugliche Eigenschaften von Begehrlichkeit und Verdrießlichkeit überhandnehmen. Aus diesem Grund übt sie Zügelung, bewacht das Sehvermögen und hält es im Zaum. ",
   "an4.37:3.4": "Wenn sie mit dem Ohr einen Ton hört … ",
