--- a/translation/de/sabbamitta/sutta/an/an4/an4.37_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.37_translation-de-sabbamitta.json
@@ -10,7 +10,7 @@
   "an4.37:2.3": "So hat ein Mönch das sittliche Verhalten vervollkommnet. ",
   "an4.37:3.1": "Und wie bewacht ein Mönch die Tore der Sinne? ",
   "an4.37:3.2": "Wenn ein Mönch mit dem Auge ein Bild sieht, bleibt er nicht an den Merkmalen und Einzelheiten hängen. ",
-  "an4.37:3.3": "Wenn das Sehvermögen nicht gezügelt wäre, würden schlechte, untaugliche Eigenschaften von Begehrlichkeit und Verdrießlichkeit überhandnehmen. Aus diesem Grund übt sie Zügelung, bewacht das Sehvermögen und hält es im Zaum. ",
+  "an4.37:3.3": "Wenn das Sehvermögen nicht gezügelt wäre, würden schlechte, untaugliche Eigenschaften von Begehrlichkeit und Verdrießlichkeit überhandnehmen. Aus diesem Grund übt er Zügelung, bewacht das Sehvermögen und hält es im Zaum. ",
   "an4.37:3.4": "Wenn sie mit dem Ohr einen Ton hört … ",
   "an4.37:3.5": "Wenn sie mit der Nase einen Duft riecht … ",
   "an4.37:3.6": "Wenn sie mit der Zunge einen Geschmack schmeckt … ",
