--- a/translation/de/sabbamitta/sutta/an/an4/an4.37_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.37_translation-de-sabbamitta.json
@@ -13,7 +13,7 @@
   "an4.37:3.3": "Wenn das Sehvermögen nicht gezügelt wäre, würden schlechte, untaugliche Eigenschaften von Begehrlichkeit und Verdrießlichkeit überhandnehmen. Aus diesem Grund übt er Zügelung, bewacht das Sehvermögen und hält es im Zaum. ",
   "an4.37:3.4": "Wenn er mit dem Ohr einen Ton hört … ",
   "an4.37:3.5": "Wenn er mit der Nase einen Duft riecht … ",
-  "an4.37:3.6": "Wenn sie mit der Zunge einen Geschmack schmeckt … ",
+  "an4.37:3.6": "Wenn er mit der Zunge einen Geschmack schmeckt … ",
   "an4.37:3.7": "Wenn sie mit dem Körper eine Berührung empfindet … ",
   "an4.37:3.8": "Wenn sie mit dem Geist eine Vorstellung erkennt, bleibt sie nicht an den Merkmalen und Einzelheiten hängen. ",
   "an4.37:3.9": "Wenn das Vorstellungsvermögen nicht gezügelt wäre, würden schlechte, untaugliche Eigenschaften von Begehrlichkeit und Verdrießlichkeit überhandnehmen. Aus diesem Grund übt sie Zügelung, bewacht das Vorstellungsvermögen und hält es im Zaum. ",
