--- a/translation/de/sabbamitta/sutta/an/an4/an4.37_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.37_translation-de-sabbamitta.json
@@ -17,7 +17,7 @@
   "an4.37:3.7": "Wenn er mit dem Körper eine Berührung empfindet … ",
   "an4.37:3.8": "Wenn er mit dem Geist eine Vorstellung erkennt, bleibt er nicht an den Merkmalen und Einzelheiten hängen. ",
   "an4.37:3.9": "Wenn das Vorstellungsvermögen nicht gezügelt wäre, würden schlechte, untaugliche Eigenschaften von Begehrlichkeit und Verdrießlichkeit überhandnehmen. Aus diesem Grund übt er Zügelung, bewacht das Vorstellungsvermögen und hält es im Zaum. ",
-  "an4.37:3.10": "So bewacht eine Nonne die Tore der Sinne. ",
+  "an4.37:3.10": "So bewacht ein Mönch die Tore der Sinne. ",
   "an4.37:4.1": "Und wie hält ein Mönch Maß beim Essen? ",
   "an4.37:4.2": "Da denkt ein Mönch beim Essen über seine Nahrung gründlich nach: ",
   "an4.37:4.3": "‚Nicht zum Spaß, zum Schwelgen, zur Zier und zum Schmuck, sondern nur, um diesen Körper zu erhalten, um Schaden abzuwenden und das geistliche Leben zu fördern; damit ich altes Unbehagen beende und neues nicht entstehen lasse und ohne Tadel und unbeschwert lebe.‘ ",
