Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -133,5 +133,6 @@
   "mn82:19.12": "Raṭṭhapāla schwieg zum Zeichen der Zustimmung. ",
   "mn82:20.1": "Da ging sein Vater, als er Raṭṭhapālas Zustimmung erkannt hatte, zurück zu seinem eigenen Haus. Er häufte Goldmünzen und ungemünztes Gold zu einem großen Haufen, den er hinter Schilfmatten versteckte. Dann wandte er sich an Raṭṭhapālas frühere Frauen: ",
   "mn82:20.2": "„Bitte, Schwiegertöchter, schmückt euch so, wie unser Sohn Raṭṭhapāla euch früher am liebsten mochte.“ ",
-  "mn82:21.1": "Als dann die Nacht vorüber war, ließ Raṭṭhapālas Vater in seiner eigenen Wohnung köstliche frische und gekochte Speisen zubereiten und benachrichtigte Raṭṭhapāla über die Zeit: "
+  "mn82:21.1": "Als dann die Nacht vorüber war, ließ Raṭṭhapālas Vater in seiner eigenen Wohnung köstliche frische und gekochte Speisen zubereiten und benachrichtigte Raṭṭhapāla über die Zeit: ",
+  "mn82:21.2": "„Es ist Zeit, Herr, das Essen ist fertig.“ "
 }
