Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -134,5 +134,6 @@
   "mn82:20.1": "Da ging sein Vater, als er Raṭṭhapālas Zustimmung erkannt hatte, zurück zu seinem eigenen Haus. Er häufte Goldmünzen und ungemünztes Gold zu einem großen Haufen, den er hinter Schilfmatten versteckte. Dann wandte er sich an Raṭṭhapālas frühere Frauen: ",
   "mn82:20.2": "„Bitte, Schwiegertöchter, schmückt euch so, wie unser Sohn Raṭṭhapāla euch früher am liebsten mochte.“ ",
   "mn82:21.1": "Als dann die Nacht vorüber war, ließ Raṭṭhapālas Vater in seiner eigenen Wohnung köstliche frische und gekochte Speisen zubereiten und benachrichtigte Raṭṭhapāla über die Zeit: ",
-  "mn82:21.2": "„Es ist Zeit, Herr, das Essen ist fertig.“ "
+  "mn82:21.2": "„Es ist Zeit, Herr, das Essen ist fertig.“ ",
+  "mn82:22.1": "Da kleidete Raṭṭhapāla sich am Morgen an, nahm Schale und Robe, ging zum Haus seines Vaters und setzte sich auf den ausgebreiteten Sitz. Raṭṭhapālas Vater enthüllte den Haufen mit Goldmünzen und ungemünztem Gold und sagte zu ihm: "
 }
